# vulgr

./: README.md  stack.yaml  vulgr.cabal
app/: Main.hs
src/: Configuration.hs  Lib.hs
src/Api/: Common.hs  Dependency.hs  Project.hs  ProjectApi.hs
src/Graph/: Persist.hs  Project.hs  UniqueNodeGraph.hs
