name:                vulgr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/vulgr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Lib
    , Configuration
    , Api.Project
    , Api.Dependency
    , Graph.Persist
    , Graph.Project
    , Graph.UniqueNodeGraph
  
  build-depends:    
    base >= 4.7 && < 5
    , aeson
    , aeson-pretty
    , bytestring
    , fgl
    , filepath
    , hashable
    , haskell-neo4j-client
    , lens
    , mtl
    , resource-pool
    , servant-server
    , text
    , unordered-containers
    , wai
    , warp
    , yaml
  default-language:    Haskell2010

executable vulgr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base
    , vulgr
    , yaml
  default-language:    Haskell2010

test-suite vulgr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vulgr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vulgr
